src/main/resources/backup/deployment-aw.yml
apiVersion: v1
kind: Service
metadata:
  name: my-aw-svc
  namespace: my-test-ns
  labels:
    app: my-aw-lbl
spec:
  ports:
  - name: http
    port: 4999
    targetPort: 4998
  selector:
    app: my-aw-lbl
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-aw-dpl
  namespace: my-test-ns
  labels:
    app: my-aw-lbl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-aw-lbl
  template:
    metadata:
      labels:
        app: my-aw-lbl
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
      - name: hello-world
        image: airwavetechio/hello-world:latest
        ports:
        - containerPort: 4998
          name: liveness-port
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
          initialDelaySeconds: 3
          periodSeconds: 5
