src/main/resources/backup/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: my-test-ns
  name: my-aw-vs
spec:
  hosts:
  - "*"
  gateways:
  - my-test-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/aw"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 4999
        host: my-aw-svc
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: my-test-ns
  name: my-hw-vs
spec:
  hosts:
  - "*"
  gateways:
  - my-test-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/hw"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 8081
        host: my-hw-svc
